--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   go_router: ^14.2.0
   flutter_svg: ^2.0.10+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   ###
 dev_dependencies:
   flutter_test:
